# biped_loco_rl

./: README.md
configs/: policy_latest.yaml
scripts/: list_envs.py  random_agent.py  zero_agent.py
scripts/rsl_rl/: play.py  train.py
scripts/skrl/: play.py  train.py
source/biped_loco/: README_BIPED_LOCO_TASK.md  setup.py
source/biped_loco/biped_loco/: ui_extension_example.py
source/biped_loco/biped_loco/tasks/: __init__.py
source/biped_loco/biped_loco/tasks/manager_based/biped_loco/: __init__.py  biped_loco.py  biped_loco_env_cfg.py
source/biped_loco/biped_loco/tasks/manager_based/biped_loco/mdp/: __init__.py  rewards.py
source/biped_loco/biped_loco/tasks/manager_based/locomotion/: __init__.py
source/biped_loco/biped_loco/tasks/manager_based/locomotion/velocity/: __init__.py  velocity_env_cfg.py
source/biped_loco/config/: extension.toml
source/biped_loco_lowlevel/biped_loco_lowlevel/: pyproject.toml  requirements.txt
source/biped_loco_lowlevel/biped_loco_lowlevel/STservo_sdk/: port_handler.py
source/biped_loco_lowlevel/biped_loco_lowlevel/biped_loco_lowlevel/robot/: biped_loco.py
source/biped_loco_lowlevel/biped_loco_lowlevel/policy/: config.py  rl_controller.py
source/biped_loco_lowlevel/biped_loco_lowlevel/recoil/: __init__.py  core.py  util.py
source/biped_loco_lowlevel/biped_loco_lowlevel/robot/: __init__.py  biped_loco.py
source/biped_loco_lowlevel/biped_loco_lowlevel/scripts/: run_locomotion.py
source/biped_loco_lowlevel/policy/: config.py  rl_controller.py
source/biped_loco_lowlevel/scripts/: run_locomotion.py
(+7 files in other folders)
