[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biped_loco_lowlevel"
version = "2025.05.28"
description = "Low-level control for Biped Loco"
authors = [
        { name = "Biped Loco Project Developers" },
]
maintainers = [
    { name = "Biped Loco Project Developers" },
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["robotics", "lowlevel"]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "psutil",
]

[project.urls]
repository = "https://github.com/Coincade/biped_loco_rl"

[tool.setuptools]
packages = ["biped_loco_lowlevel"]
zip-safe = false
